<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/tv01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="Task"
        android:textColor="@android:color/primary_text_light" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/importance_string"
        android:textColor="@android:color/primary_text_light"/>
    <RatingBar
        android:id="@+id/ratingbar01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:theme="@style/RatingBar"
        />

    <EditText
        android:id="@+id/editTextDeadline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hide_date"
        android:inputType="date" />

    <!-- Button to update data to database when clicked -->
    <Button
        android:id="@+id/saveButton1"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:onClick="onClickUpdateTask"
        android:text="@string/update_button"
        android:textColor="@android:color/primary_text_dark" />


</LinearLayout>